discord: fix my shit - chat: replied message text not showing - sidebar: actually hide all buttons - sidebar: no background on channel header hover - sidebar: reduce spacing in bottom part when in vc

--- a/src/discord/global/variables.styl
+++ b/src/discord/global/variables.styl
@@ -37,7 +37,15 @@
 
 	--legacy-elevation-low: none;
 	--legacy-elevation-high: none;
-	--legacy-elevation--border: none;
+	--legacy-elevation-border: none;
+
+	for i in \
+		border high ledge \
+		low low-active low-hover \
+		medium top-high top-ledge top-low \
+	{
+		--shadow-{i}: none;
+	}
 
 	--custom-button-button-xl-height: unset;
 	--custom-button-button-lg-height: unset;
