--- a/src/discord/parts/chat.styl
+++ b/src/discord/parts/chat.styl
@@ -124,6 +124,13 @@
 	}
 }
 
+.repliedTextPreview {
+	& > div {
+		padding: 0;
+		margin: 0;
+	}
+}
+
 .timestamp {
 	font: var(--text-ui);
 
